SSCS-11092 fixes some of the remaining tests
issues include:
generateFile not invoked
unknownDateType cannot be converted to enum
an interpreter in French is null
expects 2 hours but got 120 minutes